--- a/mystyle.css
+++ b/mystyle.css
@@ -7,6 +7,8 @@
 
 body {
     display: flex;
+    flex: 0 0 100%;
+    margin-left: 0px;
     justify-content: center;
     align-items: center;
     min-height: 100vh;
@@ -16,7 +18,7 @@ body {
 h2 {
     display: flex;
     color: transparent;
-    font-size: 15vh;
+    font-size: 10vh;
     -webkit-box-reflect: below -45px linear-gradient(transparent,#0004);
 }
 
@@ -52,5 +54,12 @@ h2 span {
         color: transparent;
         box-shadow: none;
         filter: hue-rotate(0deg);
+    }
+}
+
+@media (max-width:767px){
+    h2 {
+
+        font-size: 5vh;
     }
 }
